# CLEO-iOS

./: .clang-format  .gitignore  3.0.MD  CMakeLists.txt  Cargo.toml  HookManager.cpp  HookManager.hpp  LICENSE  Main.cpp  Main.xm  Makefile  README.md  Types.h  build.py  build.sh  control  iOS.cmake  install.sh  out.txt  package.deb  package.sh
.github/: FUNDING.yml
.theos/_/DEBIAN/: control
Custom/: Instructions.cpp  Instructions.hpp  ScriptSystem.cpp  ScriptSystem.hpp
Game/: Memory.hpp  Menu.hpp  Script.cpp  Script.hpp  Text.cpp  Text.hpp  Touch.cpp  Touch.hpp
Headers/: Debug.hpp  Types.h  Util.hpp
Hooks/: Debug.hpp  Debug.xm
deb/: cleo.plist  control  control.rootless
lib/: Substrate.h
loc/: ar.ftl  cn.ftl  cz.ftl  en.ftl  es.ftl  kh.ftl  km.ftl  mc.ftl  nl.ftl  ru.ftl  sk.ftl  th.ftl  tr.ftl  vi.ftl  zh.ftl
meta/: CSiOS.plist  Core.cmake  control  package.sh
src/: App.mm  Core.h  Debug.h  Hook.h  Load.cpp  Logging.cpp  Logging.h  RenderWare.h  Types.h  cheats.rs  check.rs  cleo.js  controller.rs  extra.rs  extras.rs  files.rs  game.rs  github.rs  gui.rs  hook.rs  js.rs  language.rs  lib.rs  loader.rs  log_.rs  logging.rs  menu.rs  meta.rs  new_scripts.rs  old_cheats.rs  old_files.rs  old_menu.rs  render.rs  resources.rs  scripts.rs  settings.rs  storage.rs  stream.rs  streaming.rs  text.rs  (+6 more)
src/bridge/: Addresses.h  Memory.h  Types.h
src/code/: Main.cpp
src/code/Custom/: Android.cpp  Instructions.cpp  ScriptSystem.cpp  Scripts.cpp
src/code/Game/: Interface.cpp  Menus.cpp  NewMenus.cpp  Script.cpp  Text.cpp  Touch.cpp
src/code/Hooks/: Debug.mm  Debug.xm  HookObjC.mm  Main.mm  Main.xm
src/code/mods/: StreamHook.cpp  TextureHook.cpp
src/code/objc/: Debug.mm  Hook.mm  HookObjC.mm  Main.mm
src/code/scripts/: Android.cpp  Script.cpp  ScriptManager.cpp
src/code/shared/: Debug.cpp  Interface.cpp  RenderWare.cpp  Text.cpp  UserFolder.cpp
src/files/: loader.rs  old_stream.rs  res.rs  stream.rs
src/game/: cheats.rs  extras.rs  scripts.rs  sound.rs  streaming.rs
src/game/scripts/: check.rs  runtime.rs
src/game/streaming/: load.rs
src/hook/: ObjectiveC.mm
src/include/: Core.h  Core.hpp
src/include/Custom/: Android.hpp  HookObjC.hpp  Instructions.hpp  ScriptSystem.hpp  Scripts.hpp
src/include/Game/: Addresses.hpp  Interface.hpp  Memory.hpp  Menu.hpp  MenuSystem.hpp  Menus.hpp  NewMenus.hpp  Script.hpp  Text.hpp  Touch.hpp
src/include/Util/: Debug.hpp  Macros.hpp  Substrate.hpp  Types.h  Types.hpp
src/include/mods/: StreamHook.h  TextureHook.h
src/include/other/: Debug.h  Hook.h  Macros.h  RenderWare.h  Substrate.h
src/include/scripts/: Android.h  Script.h  ScriptManager.h
src/include/shared/: Addresses.h  Interface.h  Memory.h  Text.h  UserFolder.h
src/meta/: github.rs  gui.rs  language.rs  menu.rs  resources.rs  settings.rs  touch.rs  update.rs
src/meta/gui/: menu.rs
src/meta/gui/menu/: cell.rs  elements.rs  tab.rs
src/mods/: StreamHook.cpp  StreamHook.h  TextureHook.cpp  TextureHook.h
src/new/: App.mm  Load.cpp  Menu.h  Menu.mm  Mobile.cpp  Mobile.h  ObjectiveC.h
src/new/Hook/: NotLogos.h  ObjectiveC.mm
src/objc/: Hook.mm  Main.mm
src/scripts/: Android.cpp  Android.h  Manager.cpp  Manager.h  Menu.h  Menu.mm  Mobile.cpp  Mobile.h  Script.cpp  Script.h  ScriptManager.cpp  ScriptManager.h  asm.rs  base.rs  cleo.js  ctrl.rs  game.rs  game_old.rs  js.rs  run.rs  sa_mobile.json  scm.rs
src/shared/: Addresses.h  Debug.cpp  Debug.h  Interface.cpp  Interface.h  Memory.h  RenderWare.cpp  Text.cpp  Text.h  UserFolder.cpp  UserFolder.h
src/sound/: osw.rs
src/stream/: custom.rs  load.rs
src/streaming/: game.rs  load.rs  stream.rs
src/ui/: controller.rs  gui.rs  menu.rs  old_menu.rs  touch.rs
src/user/: Directory.cpp  Directory.h  Text.cpp  Text.h  Touch.cpp  Touch.h
