[package]
name = "cleo"
version = "2.0.5"
authors = ["Squ1dd13 <squ1dd13dev@gmail.com>"]
edition = "2018"
description = "CLEO SA for iOS"
publish = false

[lib]
name = "cleo"
crate-type = ["staticlib"]

[dependencies]
bincode = "1.0"
serde = { version = "1.0", features = ["derive"] }
ctor = "0.1.20"
chrono = "0.4"
dlopen = "0.1"
cached = "0.23"
backtrace = "0.3"
objc = "0.2.7"
log = "0.4"
lazy_static = "1.4.0"
regex = "1.5.3"
libc = "0.2.97"
reqwest = { version = "0.11.3", features = ["blocking"] }
serde_json = "1.0"
dispatch = "0.2.0"